force-app/main/default/objects/mafaili__Automation_Config__c/mafaili__Automation_Config__c.object-meta.xml
<CustomObject>
    <label>Automation Config</label>
    <nameField>
        <displayFormat>AUT-{0000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automations Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>