force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Actions__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Actions__c</fullName>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assign Root Folder</fullName>
                <default>true</default>
                <label>Assign Root Folder</label>
            </value>
            <value>
                <fullName>Create Folder Structure</fullName>
                <isActive>false</isActive>
                <label>Create Folder Structure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>