force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Active__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>