force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>