force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Field_to_Store_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Field_to_Store_Folder_Id__c</fullName>
    <inlineHelpText>The Field API name on the record on which the component is placed that contains the Google Drive Id</inlineHelpText>
    <label>Field to Store Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>