force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Folder_Map_Field_on_Record__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Folder_Map_Field_on_Record__c</fullName>
    <label>Folder Map Field on Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>