force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>