force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Sharepoint_Root_Path__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Sharepoint_Root_Path__c</fullName>
    <label>Sharepoint Root Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>