force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Target_Value__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Target_Value__c</fullName>
    <label>Target Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>