force-app/main/default/objects/mafaili__Automation_Config__c/fields/mafaili__Top_Folder__c.field-meta.xml
<CustomField>
    <fullName>mafaili__Top_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Folder</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No folder has been found. Make sure that your folder is flagged as a Top Folder.</errorMessage>
        <filterItems>
            <field>mafaili__Folder_Structure__c.mafaili__Top_Folder__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>mafaili__Folder_Structure__c</referenceTo>
    <relationshipLabel>Automations Config</relationshipLabel>
    <relationshipName>Automations_Config</relationshipName>
    <type>Lookup</type>
</CustomField>