force-app/main/default/objects/mafaili__Automation_Config__c/validationRules/mafaili__Assign_Root_Folder_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>mafaili__Assign_Root_Folder_Mandatory</fullName>
    <active>false</active>
    <description>When the Assign Root Folder action is selected, you have to add the Root Folder Id to the record.</description>
    <errorConditionFormula>AND(
 OR(ISPICKVAL( mafaili__Actions__c , &quot;Assign Root Folder&quot;), ISPICKVAL( mafaili__Actions__c , &quot;Create Folder Structure&quot;)),
 ISBLANK(  mafaili__Root_Folder_Id__c  ) 
)</errorConditionFormula>
    <errorDisplayField>mafaili__Root_Folder_Id__c</errorDisplayField>
    <errorMessage>You need to add a Root Folder Id if you want to create an Automation Config withAssign Root Folder as action.</errorMessage>
</ValidationRule>