force-app/main/default/objects/mafaili__Automation_Config__c/validationRules/mafaili__Create_Folder_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>mafaili__Create_Folder_Mandatory</fullName>
    <active>false</active>
    <description>When the Create Folder Structure action is selected, you have to add a Top Folder to the record.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( mafaili__Actions__c , &quot;Create Folder Structure&quot;),
 ISBLANK( mafaili__Top_Folder__c ) 
)</errorConditionFormula>
    <errorDisplayField>mafaili__Top_Folder__c</errorDisplayField>
    <errorMessage>You need to add a Top Folder if you want to create an Automation Config with Create Folder Structure as action.</errorMessage>
</ValidationRule>