force-app/main/default/objects/mafaili__Automation_Config__c/listViews/mafaili__All.listView-meta.xml
<ListView>
    <fullName>mafaili__All</fullName>
    <columns>NAME</columns>
    <columns>mafaili__Object_API_Name__c</columns>
    <columns>mafaili__Start_when_Record__c</columns>
    <columns>mafaili__Actions__c</columns>
    <columns>mafaili__Active__c</columns>
    <columns>mafaili__Data_Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>