force-app/main/default/objects/mafaili__Automation_Config__c/listViews/mafaili__All1.listView-meta.xml
<ListView>
    <fullName>mafaili__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>