force-app/main/default/objects/mafaili__Automation_Config__c/listViews/mafaili__All_Active_Automations_Config.listView-meta.xml
<ListView>
    <fullName>mafaili__All_Active_Automations_Config</fullName>
    <columns>NAME</columns>
    <columns>mafaili__Object_API_Name__c</columns>
    <columns>mafaili__Start_when_Record__c</columns>
    <columns>mafaili__Actions__c</columns>
    <columns>mafaili__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>mafaili__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Automations Config</label>
</ListView>